# personal-coding-agent

./: .env  .gitignore
backend/: .coverage  AGENTS.md  main.py  pyproject.toml
backend/.tldr/cache/: call_graph.json
backend/docs/: improvements.md  llm-tool-calling.md  tools.md
backend/src/: __init__.py
backend/src/config/: __init__.py  config_service.py
backend/src/models/: __init__.py  config.py  message.py  tool.py
backend/src/orchestrators/: __init__.py  chat_orchestrator.py
backend/src/processors/: __init__.py  stream_response_processor.py
backend/src/services/: __init__.py  chat_api_service.py  message_repository.py  tool_executor.py
backend/src/tools/: __init__.py  base.py  current_time.py  errors.py  random_date.py  read_file.py
backend/src/tracing/: __init__.py  broadcaster.py  config.py  context.py  processor.py  span.py  sse_server.py  trace.py  types.py
backend/src/ui/: __init__.py  console_output.py  loading_spinner.py
backend/tests/: __init__.py  conftest.py  test_chat_api_service.py  test_chat_orchestrator.py  test_config_service.py  test_console_output.py  test_message_repository.py  test_models.py  test_sqlite_processor.py  test_stream_response_processor.py
docs/: cli-resources.md
traces-frontend/: AGENTS.md  README.md  package-lock.json  package.json  vitest.config.ts
traces-frontend/src/lib/: types.ts
traces-frontend/src/lib/components/: ConnectionStatus.svelte  DurationBar.svelte  KindBadge.svelte  SpanNode.svelte  SpanRow.svelte  SpanTree.svelte  Timeline.svelte  TimelineGraph.svelte  TraceList.svelte  TraceTree.svelte
traces-frontend/src/lib/stores/: spans.svelte.ts
traces-frontend/src/routes/: +layout.svelte  +page.svelte
traces-frontend/src/tests/: spans.store.test.ts
